--- a/src/Content.module.css
+++ b/src/Content.module.css
@@ -1,3 +1,14 @@
-.content {
+.mapContainer {
 	flex: 1;
+}
+
+.dateControlPanel {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	backdrop-filter: blur(30px);
+	z-index: 400;
+	padding: 16px 96px;
 }
