show image in report

--- a/src/components/Report.module.css
+++ b/src/components/Report.module.css
@@ -5,3 +5,19 @@
 .success-notification{
 	background-color: rgba(0, 255, 0, 0.05);
 }
+
+.image-section{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin-left: 16px;
+
+	img{
+		width: 124px;
+		height: auto;
+		object-fit: contain;
+		margin-bottom: 8px;
+		border-radius: 8px;
+	}
+}
